<resources>
    <string name="app_name">DroidCafee</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="DonutDescript">Donuts are glazed and sprinkled with candy.</string>
    <string name="string_donutdescript">"Donuts are glazed and sprinkled with candy. "</string>
    <string name="IceDescript">"Ice cream sandwiches have chocolate wafers and vanilla filling. "</string>
    <string name="FroYoDescript">"FroYo is premium self-serve frozen yogurt. "</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>

</resources>